--- a/index.html
+++ b/index.html
@@ -50,7 +50,15 @@
                 <h1 class="heading-2">Sajal Kapoor</h1>
                 <h4 class="heading-3">And I am a <span>MERN Stack Developer</span></h4>
                 <p class="bio-para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum nulla temporibus, quaerat facilis labore consectetur nam incidunt vel eos quos blanditiis, deleniti inventore nisi sit.</p>
-                <a href="" class="btn btn-primary">Resume</a>
+                <div class="socials" style="margin-bottom: 1rem;">
+                    <a target="_blank" href="https://www.linkedin.com/in/sajal-kapoor-38a98a215" class="btn btn-outline-primary">
+                        <img style="width: 3rem; height: 3rem;" src="linkedin.svg" alt="">
+                    </a>
+                    <a target="_blank" href="https://github.com/Sajal91" class="btn btn-outline-primary">
+                        <img style="width: 3rem; height: 3rem;" src="github.svg" alt="">
+                    </a>
+                </div>
+                <a target="_blank" href="https://res.cloudinary.com/dhkxnncgz/image/upload/v1714806314/Resume-SajalKapoor_jybk0z.jpg" class="btn btn-outline-light">Resume</a>
             </div>
             <div class="avatar-holder">
                 <img src="./abc.jpg" alt="">
@@ -143,6 +151,13 @@
                     </div>
                 </div>
                 <div class="card">
+                    <img src="expressjs.png" style="width: 10rem; margin-inline: auto" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">ExpressJS</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+                <div class="card">
                     <img src="nodejs.png" style="width: 10rem; margin-inline: auto" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">NodeJS</h5>
@@ -166,7 +181,7 @@
                     <div class="card">
                         <img src="./projects/simon.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <a href="" class="btn btn-primary col-12">Go Live</a>
+                            <a target="_blank" href="https://sajal91.github.io/Simon-Game/" class="btn btn-primary col-12">Go Live</a>
                         </div>
                     </div>
                   </div>
@@ -174,7 +189,7 @@
                     <div class="card">
                         <img src="./projects/todo.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <a href="" class="btn btn-primary col-12">Go Live</a>
+                            <a target="_blank" href="https://sajal91.github.io/TODO-APP/" class="btn btn-primary col-12">Go Live</a>
                         </div>
                     </div>
                   </div>
@@ -182,7 +197,7 @@
                     <div class="card">
                         <img src="./projects/color.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <a href="" class="btn btn-primary col-12">Go Live</a>
+                            <a target="_blank" href="https://sajal91.github.io/Color_Generator/" class="btn btn-primary col-12">Go Live</a>
                         </div>
                     </div>
                   </div>
