--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <img style="width: 3rem; height: 3rem;" src="github.svg" alt="">
                     </a>
                 </div>
-                <a target="_blank" href="https://res.cloudinary.com/dhkxnncgz/image/upload/v1714806314/Resume-SajalKapoor_jybk0z.jpg" class="btn btn-outline-light">Resume</a>
+                <a target="_blank" href="https://res.cloudinary.com/dhkxnncgz/image/upload/v1717586336/Screenshot_2024-06-05_164837_qtf5nc.png" class="btn btn-outline-light">Resume</a>
             </div>
             <div class="avatar-holder">
                 <img src="./abc.jpg" alt="">
