--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <h4 class="heading-1">Hi, Myself</h4>
                 <h1 class="heading-2">Sajal Kapoor</h1>
                 <h4 class="heading-3">And I am a <span>MERN Stack Developer</span></h4>
-                <p class="bio-para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum nulla temporibus, quaerat facilis labore consectetur nam incidunt vel eos quos blanditiis, deleniti inventore nisi sit.</p>
+                <p class="bio-para">I am a BCA Undergraduate and enjoyed the learning phase of MERN stack, I have various skills regarding the same. Apart from this I have a problem solving Attitude.</p>
                 <div class="socials" style="margin-bottom: 1rem;">
                     <a target="_blank" href="https://www.linkedin.com/in/sajal-kapoor-38a98a215" class="btn btn-outline-primary">
                         <img style="width: 3rem; height: 3rem;" src="linkedin.svg" alt="">
@@ -61,55 +61,17 @@
                 <a target="_blank" href="https://res.cloudinary.com/dhkxnncgz/image/upload/v1717586336/Screenshot_2024-06-05_164837_qtf5nc.png" class="btn btn-outline-light">Resume</a>
             </div>
             <div class="avatar-holder">
-                <img src="./abc.jpg" alt="">
+                <img src="./dp.jpg" alt="">
             </div>
         </div>
         <div class="about-section" id="about-box">
             <div class="about-avatar-holder">
-                <img src="./abc.jpg" alt="">
+                <img src="./dp.jpg" alt="">
             </div>
             <div class="about-text-area">
                 <h1>About <span>Me</span></h1>
                 <h4>MERN Stack Developer</h4>
-                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, dolores deserunt voluptates perspiciatis, repudiandae eius tenetur eaque ad odio culpa, rerum obcaecati debitis. Iusto, voluptate nobis! Placeat ipsa odit id deserunt esse modi, tempore architecto sed quo earum aliquid quisquam?</p> -->
-                <div class="accordion" id="accordionPanelsStayOpenExample">
-                    <div class="accordion-item">
-                      <h2 class="accordion-header">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                          Education
-                        </button>
-                      </h2>
-                      <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
-                        <div class="accordion-body">
-                          <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                        </div>
-                      </div>
-                    </div>
-                    <div class="accordion-item">
-                      <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                          Accordion Item #2
-                        </button>
-                      </h2>
-                      <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
-                        <div class="accordion-body">
-                          <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                        </div>
-                      </div>
-                    </div>
-                    <div class="accordion-item">
-                      <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                          Accordion Item #3
-                        </button>
-                      </h2>
-                      <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
-                        <div class="accordion-body">
-                          <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                        </div>
-                      </div>
-                    </div>
-                </div>
+                <p>Hello! I'm Sajal Kapoor, a passionate MERN stack Developer with a love for creating dynamic Websites. With a background in Computer Science, I enjoy Developing Websites. When I'm not working, you can find me listening music, always eager to learn and explore new things. Connect with me to share ideas and collaborate on exciting projects!</p>
             </div>
         </div>
         <div class="skills-section" id="skill-box">
@@ -119,56 +81,48 @@
                     <img src="javascript.svg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">JavaScript</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
                 </div>
                 <div class="card">
                     <img src="html.svg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">HTML</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
                 </div>
                 <div class="card">
                     <img src="css.svg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">CSS</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
                 </div>
                 <div class="card">
                     <img src="https://getbootstrap.com/docs/5.3/assets/brand/bootstrap-logo.svg" style="width: 12rem; height: 10rem; margin-inline: auto" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Bootstrap</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
                 </div>
                 <div class="card">
                     <img src="mongodb.jpeg" style="width: 10rem; margin-inline: auto" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">MongoDB</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
                 </div>
                 <div class="card">
                     <img src="expressjs.png" style="width: 10rem; margin-inline: auto" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">ExpressJS</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
                 </div>
                 <div class="card">
                     <img src="nodejs.png" style="width: 10rem; margin-inline: auto" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">NodeJS</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
                 </div>
                 <div class="card">
                     <img src="github.png" style="width: 10rem; margin-inline: auto" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">GitHub</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
                 </div>
             </div>
